fix: overflow-x instead of overflow hidden on main to fix bottom padding

--- a/frontend-react/src/styles/landing.css
+++ b/frontend-react/src/styles/landing.css
@@ -456,7 +456,7 @@ img {
 }
 
 .main {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .first-screen {
